version 0.2.0 - currently working on
- Improved German translation (#152)

version 0.1.2 - released on 2006-07-23
- Fixed a bug with selecting the template file in the flexform (#181)

version 0.1.1 - released on 2006-07-03
- Added configuration to ignore the group selection (#151)

version 0.1.0 - released on 2006-06-29
- Fixed the doubled appearance of the flexform (#58)
- Improved the selection of persons for the BOX Module (#57)
- Added a check in the teamlist view (#100)
- Added a few universal fields (#35)
- Improved the flexform (#53, #55, #54, #101)
- Localized the error messages (#51)
- Enhanced the indexing: The indexed page title in detail view is now the name of the person (#83)
- Added note on spam protection to the manual (#48)
- Hide empty fields in detailed view. Reworked the the whole templating engine. (#39)
- Fixed indexing of the output (#41)
- Changed the labels in detail view to be localized (#49)
- Added a title field to the person records (#45)
- Moved this Changelog and the todo section from manual to *.txt files (#46)

version 0.0.6 - released on 2006-06-13
- Fixed a possible security hole (SQL-Injection) reported by the TYPO3 security team.
- Fixed the handling of output, now using htmlspecialchars().
- Changed the selection of “group to show” in the team list view (show the existing groups and give possibility to select from them instead of entering a code-word).
- Converted the locallang*.php files to the new xml format.
- Added configuration to select, how email addresses should be secured against spammers.
- Added the possibility to upload up to five files per person (e.g. for a CV).
- Changed the behaviour to select, which module to show (now a select instead of a text input field).
- Reworked generation process for team lists (new structure, almost completely rewritten).
- Reworked the “person is member of” in the detailed view (completely rewritten).
- Changed the template to be much smaller.