@@ -1,5 +1,6 @@
 version 0.2.0 - currently working on
 - Improved German translation (#152)
+- Improved the "person is member of groups" function (#185)
 
 version 0.1.2 - released on 2006-07-23
 - Fixed a bug with selecting the template file in the flexform (#181)
